@startuml
skinparam classAttributeIconSize 0
hide methods
hide circles

class AplicacaoBancaria {
    listaUsuarios
    listaInvestimentos
}

class Usuario {
    nome
    cpf
    email
    tipo
}

class Cliente {
    listaContas
}

class Administrador {
    matricula
}

class Conta {
    numero
    agencia
    saldo
    status
}

class Cartao {
    numero
    limite
    bloqueado
}

class Transacao {
    data
    valor
    tipo
}

class Investimento {
    produto
    valorAplicado
}


' Relacionamentos Conceituais
AplicacaoBancaria "1" -- "*" Usuario : gerencia
Usuario <|-- Cliente
Usuario <|-- Administrador

Cliente "1" -- "1..*" Conta : possui
Conta "1" -- "0..*" Cartao : tem
Conta "1" -- "*" Transacao : registra
Conta "1" -- "*" Investimento : aplica

Administrador "1" -- "*" Conta : audita
@enduml